@startuml classes

class classes.GameManager {
    - screen: Surface
    - clock: Clock
    - font: Font
    - all_sprites: Group
    - foods: Group
    - obstacles: Group
    - score: int
    - game_over: bool
    - active: bool
    - player: Troll
    - pending_obstacles: list
    + __init__()
    + spawn_food()
    + spawn_obstacle(pos)
    + handle_events()
    + update()
    + draw()
    + run()
}



class classes.GameObject {
    - window
    - x: int
    - y: int
    - width: int
    - height: int
    - color: tuple<int, int, int>
    - font
    - letter
    + image
    + rect
    - draw(): None 
    - collides_with(other_obj): bool
}

class classes.Troll {
    - speed_x: float
    - speed_y: float
    - update(GAME_OVER: bool): None
    - update_speed(increment: float = 1E-4): None
}

class classes.Food {
}

class classes.Obstacle {
}



GameObject <|-- Troll
GameObject <|-- Food
GameObject <|-- Obstacle
GameManager "1" *-- "*" GameObject : contains


@enduml